# Rev

./: .gitattributes  .gitignore  LICENSE  README.md
CoreLib/cpp/: revColor.cpp  revMatirx44.cpp  revMatrix33.cpp  revMemory.cpp  revQuaternion.cpp  revString.cpp  revVector3.cpp
CoreLib/include/: revArray.h  revArray.inl  revBitset.h  revBitset.inl  revColor.h  revDictionary.h  revFixedArray.h  revHash.h  revIterator.h  revList.h  revMap.h  revMath.h  revMathUtil.h  revMatrix33.h  revMatrix44.h  revMatrix44.inl  revMemory.h  revQuaternion.h  revQuaternion.inl  revQueue.h  revQueue.inl  revRect.h  revSingleton.h  revSmartPointer.h  revSmartPointer.inl  revStack.h  revStreamReader.h  revString.h  revTypedef.h  revVector2.h  revVector2.inl  revVector3.h  revVector3.inl  revVector4.h  revVector4.inl
CoreLib/projects/Windows/: CoreLib.vcxproj  CoreLib.vcxproj.filters
CoreLib/projects/Windows/CoreLib/: CoreLib.vcxproj  CoreLib.vcxproj.filters
PlatformLib/AndroidLib/cpp/: File.cpp  GLESDeviceContext.cpp  GLESRenderState.cpp  GLESRenderer.cpp  Locker.cpp  Thread.cpp  VkDeviceContext.cpp  VkRenderInfo.cpp  VkRenderer.cpp  VkSwapChain.cpp  VulkanBuffer.cpp  VulkanCommandList.cpp  VulkanDescriptorSet.cpp  VulkanDescriptorSetLayout.cpp  VulkanDevice.cpp  VulkanDeviceContext.cpp  VulkanFrameBuffer.cpp  VulkanPipelineState.cpp  VulkanRenderInfo.cpp  VulkanRenderPass.cpp  VulkanRenderState.cpp  VulkanRenderer.cpp  VulkanSampler.cpp  VulkanShader.cpp  VulkanSwapChain.cpp  VulkanTexture.cpp  VulkanTextureView.cpp  Window.cpp  revTexture.cpp
PlatformLib/AndroidLib/include/: AndroidContext.h  File.h  GLESDeviceContext.h  GLESGraphics.h  GLESRenderState.h  GLESRenderer.h  Locker.h  Log.h  Thread.h  VkDeviceContext.h  VkRenderInfo.h  VkRenderer.h  VkSwapChain.h  VulkanBuffer.h  VulkanCommandList.h  VulkanDescriptorSet.h  VulkanDescriptorSetLayout.h  VulkanDevice.h  VulkanDeviceContext.h  VulkanFrameBuffer.h  VulkanPipelineState.h  VulkanRenderInfo.h  VulkanRenderPass.h  VulkanRenderer.h  VulkanSampler.h  VulkanShader.h  VulkanSwapChain.h  VulkanTexture.h  VulkanTextureView.h  Window.h  revTexture.h
PlatformLib/Graphics/DX12/cpp/: DX12Buffer.cpp  DX12CommandList.cpp  DX12ConstantBufferView.cpp  DX12DescriptorHeap.cpp  DX12Device.cpp  DX12Fence.cpp  DX12FrameBuffer.cpp  DX12IndexBufferView.cpp  DX12MeshRenderer.cpp  (+9 more)
PlatformLib/WindowsLib/: DX12SwapChain.cpp  WindowLib.vcxproj  WindowLib.vcxproj.filters  WindowsLib.vcxproj  WindowsLib.vcxproj.filters
PlatformLib/WindowsLib/cpp/: DX11DeviceContext.cpp  DX11Renderer.cpp  DX12Buffer.cpp  DX12CommandList.cpp  DX12DescriptorHeap.cpp  DX12Device.cpp  DX12DeviceContext.cpp  DX12FrameBuffer.cpp  DX12PipelineState.cpp  DX12RenderInfo.cpp  DX12Renderer.cpp  DX12RootSignature.cpp  DX12Sampler.cpp  DX12Shader.cpp  DX12SwapChain.cpp  DX12Texture.cpp  DX12TextureView.cpp  FBXLoader.cpp  File.cpp  GLDeviceContext.cpp  GLRenderer.cpp  Log.cpp  Thread.cpp  VKDeviceContext.cpp  VKRenderer.cpp  Window.cpp
PlatformLib/WindowsLib/include/: AtomicCounter.h  CriticalSection.h  DX11DeviceContext.h  DX11Renderer.h  DX12Buffer.h  DX12CommandList.h  DX12DescriptorHeap.h  DX12Device.h  DX12DeviceContext.h  DX12FrameBuffer.h  DX12PipelineState.h  DX12RenderInfo.h  DX12Renderer.h  DX12RootSignature.h  DX12Sampler.h  DX12Shader.h  DX12SwapChain.h  DX12Texture.h  DX12TextureView.h  FBXLoader.h  File.h  GLDeviceContext.h  GLRenderer.h  Log.h  Thread.h  VKDeviceContext.h  VKRenderer.h  Window.h  revCriticalSection.h  revSemaphore.h
PlatformLib/common/: revAsyncable.h  revGraphicsBuffer.h  revGraphicsTypedef.h  revLocker.h  revShader.h  revTexture.h
PlatformLib/common/cpp/: revDescriptorBindingDesc.cpp  revShader.cpp  revTexture.cpp
PlatformLib/common/include/: revDescriptorBindingDesc.h  revDescriptorHeap.h  revDevice.h  revDeviceContext.h  revFile.h  revGraphicsBuffer.h  revGraphicsCommandList.h  revGraphicsResource.h  revGraphicsTypedef.h  revRenderer.h  revSampler.h  revShader.h  revShaderResourceView.h  revTexture.h  revTextureView.h  revThread.h
PlatformLib/interface/: GraphicsTypedef.h  IAsyncable.h  IDeviceContext.h  IFile.h  IGraphicsBuffer.h  IMaterial.h  IRenderer.h  IShader.h  ITexture.h  IThread.h
Rev/cpp/: revApp.cpp  revCamera.cpp  revDrawCommand.cpp  revGameObject.cpp  revGameObjectManager.cpp  revGraphics.cpp  revLogger.cpp  revMaterialLoader.cpp  revMesh.cpp  revMeshRenderer.cpp  revModel.cpp  revModelLoader.cpp  revResourceManager.cpp  revScene.cpp  revSceneLoader.cpp  revSceneManager.cpp  revTextureLoader.cpp  revThreadPool.cpp  revTransform.cpp
Rev/include/: revApp.h  revAsyncTaskWorker.h  revCamera.h  revCriticalSection.h  revDrawCommand.h  revGameObject.h  revGameObjectManager.h  revGraphics.h  revLogger.h  revMaterial.h  revMaterialLoader.h  revMesh.h  revMeshRenderer.h  revModel.h  revModelLoader.h  revRenderInfo.h  revResource.h  revResourceLoader.h  revResourceManager.h  revScene.h  revSceneLoader.h  revSceneManager.h  revSerializer.h  revShader.h  revShaderLoader.h  revSystemBase.h  revTextureLoader.h  revThread.h  revThreadPool.h  revTransform.h  revUploadableResource.h  revWindow.h
Rev/project/android/: .cproject  .project
Rev/project/windows/: Rev.vcxproj  Rev.vcxproj.filters  windows.vcxproj  windows.vcxproj.filters
RevSample/Android/: settings.gradle
RevSample/Android/app/: build.gradle
RevSample/Android/app/src/main/cpp/: CMakeLists.txt  main.cpp
RevSample/Projects/Android/: build.gradle  settings.gradle
RevSample/Projects/Windows/: RevSample.sln  RevSample.vcxproj  RevSample.vcxproj.bak  RevSample.vcxproj.filters  shaderCompiler.bat
RevSample/Resources/: cbufferTex_frag.hlsl  cbufferTex_frag.spv  cbuffer_frag.hlsl  cbuffer_frag.spv  cbuffer_vert.hlsl  cbuffer_vert.spv  ironman_frag.hlsl  ironman_frag.spv  ironman_vert.hlsl  ironman_vert.spv  model_frag.spv  model_vert.hlsl  model_vert.spv  texture_frag.hlsl  texture_frag.spv  texture_vert.hlsl  texture_vert.spv  vertex_color.hlsl
RevSample/Resources/Models/: cube.fbx  cube_blender.mdl  cube_maya.fbx  plane.fbx
RevSample/Windows/RevSample/: RevSample.sln
(+89 files in other folders)
